package com.smartfitness.search.adapter;

import lombok.extern.slf4j.Slf4j;
import org.springframework.stereotype.Repository;

import java.util.List;
import java.util.Map;

/**
 * System Interface Layer: ElasticSearch Repository
 * Component: ElasticSearchRepository
 * 
 * Implements: ISearchEngineRepository
 * Database: SearchEngineDB (ElasticSearch)
 * 
 * Hot Path: Fast search queries
 * Cold Path: Async indexing
 * 
 * In production, use Spring Data Elasticsearch
 * 
 * Reference: 03_BranchContentServiceComponent.puml
 */
@Slf4j
@Repository
public class ElasticSearchRepository implements ISearchEngineRepository {
    
    @Override
    public List<Map<String, Object>> search(List<String> keywords, String location) {
        log.info("Searching ElasticSearch: keywords={}, location={}", keywords, location);
        
        // Stub: In production, use ElasticsearchRestTemplate or ReactiveElasticsearchClient
        // SearchQuery searchQuery = new NativeSearchQueryBuilder()
        //     .withQuery(QueryBuilders.multiMatchQuery(keywords, "name", "description", "tags"))
        //     .withFilter(QueryBuilders.geoDistanceQuery("location").distance(location))
        //     .build();
        // SearchHits<BranchDocument> hits = elasticsearchOperations.search(searchQuery, BranchDocument.class);
        
        // Stub: Return mock results
        List<Map<String, Object>> results = List.of(
                Map.of("branchId", "branch-001", "name", "Fitness Club A", "score", 0.95),
                Map.of("branchId", "branch-002", "name", "Gym B", "score", 0.82)
        );
        
        log.info("Search completed: {} results", results.size());
        
        return results;
    }
    
    @Override
    public void index(String documentId, Map<String, Object> document) {
        log.info("Indexing document to ElasticSearch: {}", documentId);
        
        // Stub: In production, use ElasticsearchRestTemplate
        // BranchDocument doc = new BranchDocument();
        // doc.setId(documentId);
        // doc.setBranchId((String) document.get("branchId"));
        // doc.setContent((String) document.get("content"));
        // doc.setKeywords((String) document.get("keywords"));
        // elasticsearchOperations.save(doc);
        
        log.debug("Document indexed successfully: {}", documentId);
    }
}

